# lez-multisig

./: Cargo.toml  Makefile  README.md  SPEC.md
.github/workflows/: e2e.yml
cli/: Cargo.toml  multisig.rs
docs/: FURPS.md  gap-analysis.md
e2e_tests/: Cargo.toml  run_e2e.sh
e2e_tests/tests/: e2e_multisig.rs
examples/program_deployment/: Cargo.toml
lez-multisig-ffi/: Cargo.toml
lez-multisig-ffi/include/: lez_multisig.h
lez-multisig-ffi/src/: lib.rs  multisig.rs  multisig_idl.json
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
multisig_core/: Cargo.toml
multisig_core/src/: lib.rs
multisig_program/: Cargo.toml
multisig_program/src/: add_member.rs  approve.rs  change_threshold.rs  create_multisig.rs  execute.rs  lib.rs  propose.rs  reject.rs  remove_member.rs
scripts/: run_e2e.sh
treasury_core/: Cargo.toml
treasury_core/src/: lib.rs
treasury_program/: Cargo.toml
treasury_program/src/: add_member.rs  change_threshold.rs  create_multisig.rs  create_vault.rs  deposit.rs  execute.rs  init.rs  lib.rs  receive.rs  remove_member.rs  send.rs  transfer.rs  withdraw.rs
