[package]
name = "multisig-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multisig"
path = "src/bin/multisig.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
multisig_core = { path = "../multisig_core" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
nssa = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
risc0-zkvm = { version = "3.0.3", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
