[package]
name = "multisig-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multisig"
path = "src/bin/multisig.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
multisig_core = { path = "../multisig_core" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
nssa = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
risc0-zkvm = { version = "3.0.5", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
hex = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
