[package]
name = "multisig_program"
version = "0.1.0"
edition = "2024"

[dependencies]
multisig_core = { path = "../multisig_core" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration", features = ["host"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
borsh = "1.5.7"
risc0-zkvm = { version = "=3.0.4", features = ['std'] }
