[package]
name = "treasury_program"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
treasury_core = { path = "../treasury_core" }
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
