[package]
name = "treasury-examples"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deploy_and_create_vault"
path = "src/bin/deploy_and_create_vault.rs"

[[bin]]
name = "send_from_vault"
path = "src/bin/send_from_vault.rs"

[dependencies]
treasury_core = { path = "../../treasury_core" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git" }
token_core = { git = "https://github.com/logos-blockchain/lssa.git" }
risc0-zkvm = { version = "3.0.3", features = ["std"] }
borsh = "1.5.7"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
risc0-build = "3.0.3"
