[package]
name = "treasury-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
treasury_core = { path = "../../treasury_core" }
tokio = { version = "1", features = ["macros"] }
risc0-zkvm = { version = "3.0", features = ["serde"] }
